<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:gravity="center_horizontal"
            android:text="@string/add_new_contact_label"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/contact_first_name_placeholder"
            android:paddingHorizontal="5dp"
            android:autofillHints="Employee first name"
            android:inputType="text" />


        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/contact_last_name_placeholder"
            android:paddingHorizontal="5dp"
            android:autofillHints="Employee last name"
            android:inputType="text" />



        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/contact_email_placeholder"
            android:paddingHorizontal="5dp"
            android:autofillHints="Employee email"
            android:inputType="text" />


        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:digits="0123456789"
            android:hint="@string/contact_number_placeholder"
            android:inputType="number"
            android:paddingHorizontal="5dp"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/contact_address_placeholder"
            android:paddingHorizontal="5dp"
            android:autofillHints="Employee address"
            android:inputType="text" />


        <Button
            android:id="@+id/btn_add_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/add_contact_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>